--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MPL-2.0",
   "dependencies": {
     "dateformat": "1.0.12",
+    "joi": "6.10.0",
     "json-stream": "1.0.0",
     "through2": "2.0.1"
   }
